2007-10-24  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_load_from_gconf),
	(theme_details_changed_cb), (themes_init): return a new theme instead
	of munging whatever got passed in. Makes for a saner API

2007-10-24  Jens Granseuer  <jensgr@gmx.net>

	The fix for bug #420154 not only made the entry for the theme installer
	disappear from the menu, but also disabled mime-type handling for Gnome
	Theme Packages (bug #486811). Revert that change and use NoDisplay=true
	instead. This will remove the entry from the menu (not from the menu
	editor, though), and not break mime handling.

	* data/gnome-theme-installer.desktop.in.in: use NoDisplay=true instead
	of OnlyShowIn=;

2007-10-18  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_load_from_gconf),
	(theme_set_custom_from_theme): really make sure gtk, metacity, icon, and
	cursor themes are never NULL (should fix #487257 if the last commit didn't
	already)

2007-10-14  Jens Granseuer  <jensgr@gmx.net>

	When updating theme info from GConf or copying it for customization, we
	were ignoring xcursor settings. As a result, saved custom themes always
	had the default theme set. (bug #485709)

	* appearance-themes.c: (get_default_int_from_key),
	(theme_load_from_gconf), (theme_set_custom_from_theme): when setting up
	theme info, take cursor settings into account

2007-10-09  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_props_wp_set): fix crash if we fail to
	convert a filename to UTF-8

2007-09-28  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_store_sort_func): make theme sorting
	case-insensitive (bug #481224)

2007-09-23  Jens Granseuer  <jensgr@gmx.net>

	* gnome-wp-item.c: (gnome_wp_item_free), (gnome_wp_item_dup):
	* gnome-wp-item.h:
	* gnome-wp-xml.c: (gnome_wp_xml_load_xml): remove unused imguri property
	from GnomeWPItem

2007-09-23  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_drag_received), (wp_drag_get_data),