@@ -1,3 +1,10 @@
+2007-10-25  Denis Washington  <denisw@svn.gnome.org>
+
+	* gnome-theme-apply.c: Fix the cursor size being only being updated
+	if the cursor theme changed too.
+	* gnome-theme-info.c: Also watch /usr/share/cursors/xorg-x11 for
+	cursor themes (path used by Gentoo Linux)
+
 2007-10-24  Jens Granseuer  <jensgr@gmx.net>
 
 	This change hopefully fixes bug #484797 which I suspect is caused by
