@@ -1,3 +1,8 @@
+2007-10-25  Denis Washington  <denisw@svn.gnome.org>
+
+	* appearance-themes.c: Take cursor size into account in theme_is_equal(),
+	and also watch the cursor theme/size gconf keys for changes.
+
 2007-10-24  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-themes.c: (theme_load_from_gconf),
